# AzusaClockinAssistant

./: .gitignore  pyproject.toml
.github/workflows/: daily.yml
azusa_clockin_assistant/: entry.py
azusa_clockin_assistant/common/: base.py  decorators.py
azusa_clockin_assistant/interface/: bilibili.py
azusaclockinassistant/: entry.py
azusaclockinassistant/common/: decorators.py
azusaclockinassistant/interface/: bilibili.py  mihoyo.py  weibo.py
